--- a/frontend/libraries.Rmd
+++ b/frontend/libraries.Rmd
@@ -5,42 +5,13 @@ output:
     highlight: "default"
     theme: "simplex"
     toc: true
+params:
+  hill_data: NULL
+  hunt_data: NULL
 ---
 
 ```{r echo=FALSE}
-library(dotenv)
-library(DBI)
-library(RMySQL)
-
-to_datetime <- function(datetime_string) {
-  return(as.POSIXct(datetime_string, tz = "", format = "%Y-%m-%d %H:%M:%OS"))
-}
-
-entries_since_n_hrs_ago <- function(entries, datetimes, hours) {
-  most_recent_datetime <- tail(datetimes, n = 1)
-  n_hrs_ago <- most_recent_datetime - 60 * 60 * hours
-  entries_since <- subset(entries, datetimes >= n_hrs_ago)
-  return(entries_since)
-}
-
-db <- dbConnect(RMySQL::MySQL(),
-  dbname = "busyness",
-  host = Sys.getenv("DB_HOST"),
-  user = Sys.getenv("DB_USER"),
-  password = Sys.getenv("DB_PASSWORD")
-)
-
-hill_data <- dbReadTable(db, "hill")
-hill_data <- entries_since_n_hrs_ago(
-  hill_data, to_datetime(hill_data$record_datetime), 24 * 7 * 5
-)
-
-hunt_data <- dbReadTable(db, "hunt")
-hunt_data <- entries_since_n_hrs_ago(
-  hunt_data, to_datetime(hunt_data$record_datetime), 24 * 7 * 5
-)
-
-dbDisconnect(db)
+source("./helpers.R")
 ```
 
 # Hill
